Remove message about supported browser on web packaging in mobile devices.

--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -102,7 +102,7 @@
       unsupported<br/>
       <span class="text-highlighted">browser</span>
     </h2>
-    <div class="textgroup-ingress row">currently only the
+    <div ng-if="!mobilePlatform" class="textgroup-ingress row">currently only the
       <span class="text-highlighted">google chrome</span> browser is supported
     </div>
 
