Fixed Android bug with agenda calendar not always visible after boot

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -369,7 +369,7 @@
                   </div>
                 </div>
               </div>
-              <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
+              <span ng-if="isEventInstancesLoaded() && (!agendaEvents || !agendaEvents.length)" class="row text-details">no events</span>
             </a>
           </div>
         </div>
@@ -419,7 +419,7 @@
                   </div>
                 </div>
               </div>
-              <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
+              <span ng-if="isEventInstancesLoaded() && (!agendaEvents || !agendaEvents.length)" class="row text-details">no events</span>
             </a>
           </div>
         </div>
@@ -469,7 +469,7 @@
                   </div>
                 </div>
               </div>
-              <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
+              <span ng-if="isEventInstancesLoaded() && (!agendaEvents || !agendaEvents.length)" class="row text-details">no events</span>
             </a>
           </div>
         </div>
@@ -519,7 +519,7 @@
                   </div>
                 </div>
               </div>
-              <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
+              <span ng-if="isEventInstancesLoaded() && (!agendaEvents || !agendaEvents.length)" class="row text-details">no events</span>
             </a>
           </div>
         </div>
@@ -569,7 +569,7 @@
                   </div>
                 </div>
               </div>
-              <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
+              <span ng-if="isEventInstancesLoaded() && (!agendaEvents || !agendaEvents.length)" class="row text-details">no events</span>
             </a>
           </div>
         </div>
