Added sync icon into list.

--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -8,4 +8,8 @@
     swiper-click="changeFeature('list', list, true)">
     <span class="text-link" clamp=2 ng-bind="list.trans.title"></span>
   </a>
+
+  <div class="group-mixed--right">
+    <span class="syncing"></span>
+  </div>
 </div>
