Added sync icon into lists. Fixes for inbox status indicator vertical positioning.

--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -1,4 +1,4 @@
-<div class="group-mixed vertically-centered">
+<div class="group-mixed vertically-centered" ng-class="getListItemClasses(list)">
   <div class="group-mixed--left">
     <a href swiper-click="changeFeature('list', list, true)">
       <span class="text-navigation-back large"></span>
@@ -9,7 +9,7 @@
     <span class="text-link" clamp=2 ng-bind="list.trans.title"></span>
   </a>
 
-  <div class="group-mixed--right">
+  <div class="group-mixed--right justified">
     <span class="syncing"></span>
   </div>
 </div>
