Work on download page

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -155,7 +154,7 @@
   </div>
   <footer>
     <div class="centered">
-      <a href class="button">begin</a>
+      <a href class="button" onclick="trackBegin();return false;">begin</a>
     </div>
     <div class="right">
       <div onclick="var audio = document.getElementById('theme');
