Added twitter and facebook links as icons to landing page

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -153,6 +153,16 @@
     </div>
   </div>
   <footer>
+    <div class="left">
+      <div class="some-container">
+        <a href="https://www.facebook.com/extmd" class="some" target="_blank">
+          <span class="icon-facebook"></span>
+        </a>
+        <a href="https://www.twitter.com/extmd" class="some" target="_blank">
+          <span class="icon-twitter"></span>
+        </a>
+      </div>
+    </div>
     <div class="centered">
       <a href class="button" onclick="trackBegin();return false;">begin</a>
     </div>
