Landing page menu layout

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -65,16 +65,18 @@
     <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <div class="logo"><a href><span class="icon-logo"></span></a></div>
+          <a href class="logo"><span class="icon-logo"></span></a>
         </li>
-        <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+        <li class="toggle-topbar menu-icon"><a href><span class="icon-menu"></span></a></li>
       </ul>
       <section class="top-bar-section">
         <ul class="right">
-          <li class="active"><a href="#">home</a></li>
-          <li><a href="manifesto.html">manifesto</a></li>
+          <li class="active"><a href>home</a></li>
+          <li id="manifesto"><a href="manifesto.html">manifesto</a></li>
           <li><a href="http://www.extendedmind.org" target="_blank">blog</a></li>
           <li><a href="mailto:info@ext.md">contact</a></li>
+          <li class="hide-for-medium-up"><a href="https://www.facebook.com/extmd" target="_blank">facebook</a></li>
+          <li class="hide-for-medium-up"><a href="https://www.twitter.com/extmd" target="_blank">twitter</a></li>
           <li><a href="https://ext.md/login">log in</a></li>
         </ul>
       </section>
