--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -45,6 +45,7 @@
         ga('send', 'event', {
             'category': 'begin',
             'action': 'click',
+            'label': 'manifesto',
             'hitCallback': function() {
               document.location = 'https://ext.md/begin';
             }
@@ -72,7 +73,7 @@
       <section class="top-bar-section">
         <ul class="right">
           <li class="active"><a href>home</a></li>
-          <li id="manifesto"><a href="manifesto.html">manifesto</a></li>
+          <li id="manifesto-link"><a href="manifesto.html">manifesto</a></li>
           <li><a href="http://www.extendedmind.org" target="_blank">blog</a></li>
           <li><a href="mailto:info@ext.md">contact</a></li>
           <li class="hide-for-medium-up"><a href="https://www.facebook.com/extmd" target="_blank">facebook</a></li>
