--- a/frontend/core/src/main/webapp/landing/manifesto.html
+++ b/frontend/core/src/main/webapp/landing/manifesto.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="extended mind &ndash; task and note organizer that keeps you zen">
-  <title>extended mind</title>
+  <title>extended mind | manifesto</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="css/animate-animo.css" >
@@ -29,7 +29,7 @@
   <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
-  <meta name="application-name" content="extended mind">
+  <meta name="application-name" content="extended mind | manifesto">
 
   <script>
     if (document.location.hostname.search("ext.md") !== -1) {
@@ -40,6 +40,22 @@
 
       ga('create', 'UA-44203690-1', 'auto');
       ga('send', 'pageview');
+
+      var trackBegin = function() {
+        ga('send', 'event', {
+            'category': 'begin',
+            'action': 'click',
+            'label': 'home',
+            'hitCallback': function() {
+              document.location = 'https://ext.md/begin';
+            }
+          }
+        );
+      };
+    }else{
+      var trackBegin = function() {
+        console.log("trackBegin");
+      };
     }
   </script>
 </head>
@@ -55,8 +71,8 @@
       </ul>
       <section class="top-bar-section">
         <ul class="right">
-          <li class="active"><a href>home</a></li>
-          <li id="manifesto-link"><a href="manifesto.html">manifesto</a></li>
+          <li><a href="index.html">home</a></li>
+          <li id="manifesto-link" class="active"><a href>manifesto</a></li>
           <li><a href="http://www.extendedmind.org" target="_blank">blog</a></li>
           <li><a href="mailto:info@ext.md">contact</a></li>
           <li class="hide-for-medium-up"><a href="https://www.facebook.com/extmd" target="_blank">facebook</a></li>
@@ -67,29 +83,40 @@
     </nav>
   </header>
   <div class="main">
-    <div id="download">
-      <div class="jumbotron">
-        <span class="text-jumbotron">download</span><br/>
-        <span class="text-jumbotron">the </span><span class="text-jumbotron highlighted">app</span>
-      </div>
-
-      <div class="download-buttons">
-        <div class="pull-left">
-          <a href="itms://itunes.com/apps/extendedmind"><img style="width: 120px" src="img/download-app-store.png"/></a><br/>
-          <span class="text-details">iphone 4s or later</span>
-        </div>
-        <div class="pull-right">
-          <a href="market://details?id=org.extendedmind"><img style="width: 120px" src="img/download-google-play.png"/></a><br/>
-          <span class="text-details">4.4 kitkat or later</span>
-        </div>
+    <div id="manifesto">
+      <div id="manifesto-container">
+        <p><span class="text-large">we are</span>
+        <span class="text-large highlighted">philosophers</span>
+        </p>
+        <p><span class="text-normal">not just the shaggy haired guys spouting nietzsche and kant at the local pub
+        (though we’ve been known to do that too). but ph.d’s in intuitive thinking, learning and
+        communication. we’re also geeks that design, code and polish. so we’ve married our two
+        worlds &ndash; technology and philosophy &ndash; to create products designed to</span></p>
+        <p><span class="text-large">change the way you</span>
+        <span class="text-large highlighted">think</span></p>
+        <p><span class="text-normal">we believe the human mind is the single greatest tool we have to better
+        humanity. so what would the world look like if we could improve our minds’ capacity to function,
+        focus and flow?</span>
+        </p>
       </div>
     </div>
   </div>
-  <!-- http://imulus.github.io/retinajs/ -->
-  <script>
-  !function(){function a(){}function b(a){return f.retinaImageSuffix+a}function c(a,c){if(this.path=a||"","undefined"!=typeof c&&null!==c)this.at_2x_path=c,this.perform_check=!1;else{if(void 0!==document.createElement){var d=document.createElement("a");d.href=this.path,d.pathname=d.pathname.replace(g,b),this.at_2x_path=d.href}else{var e=this.path.split("?");e[0]=e[0].replace(g,b),this.at_2x_path=e.join("?")}this.perform_check=!0}}function d(a){this.el=a,this.path=new c(this.el.getAttribute("src"),this.el.getAttribute("data-at2x"));var b=this;this.path.check_2x_variant(function(a){a&&b.swap()})}var e="undefined"==typeof exports?window:exports,f={retinaImageSuffix:"@2x",check_mime_type:!0,force_original_dimensions:!0};e.Retina=a,a.configure=function(a){null===a&&(a={});for(var b in a)a.hasOwnProperty(b)&&(f[b]=a[b])},a.init=function(a){null===a&&(a=e);var b=a.onload||function(){};a.onload=function(){var a,c,e=document.getElementsByTagName("img"),f=[];for(a=0;a<e.length;a+=1)c=e[a],c.getAttributeNode("data-no-retina")||f.push(new d(c));b()}},a.isRetina=function(){var a="(-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-resolution: 1.5dppx)";return e.devicePixelRatio>1?!0:e.matchMedia&&e.matchMedia(a).matches?!0:!1};var g=/\.\w+$/;e.RetinaImagePath=c,c.confirmed_paths=[],c.prototype.is_external=function(){return!(!this.path.match(/^https?\:/i)||this.path.match("//"+document.domain))},c.prototype.check_2x_variant=function(a){var b,d=this;return this.is_external()?a(!1):this.perform_check||"undefined"==typeof this.at_2x_path||null===this.at_2x_path?this.at_2x_path in c.confirmed_paths?a(!0):(b=new XMLHttpRequest,b.open("HEAD",this.at_2x_path),b.onreadystatechange=function(){if(4!==b.readyState)return a(!1);if(b.status>=200&&b.status<=399){if(f.check_mime_type){var e=b.getResponseHeader("Content-Type");if(null===e||!e.match(/^image/i))return a(!1)}return c.confirmed_paths.push(d.at_2x_path),a(!0)}return a(!1)},b.send(),void 0):a(!0)},e.RetinaImage=d,d.prototype.swap=function(a){function b(){c.el.complete?(f.force_original_dimensions&&(c.el.setAttribute("width",c.el.offsetWidth),c.el.setAttribute("height",c.el.offsetHeight)),c.el.setAttribute("src",a)):setTimeout(b,5)}"undefined"==typeof a&&(a=this.path.at_2x_path);var c=this;b()},a.isRetina()&&a.init(e)}();
-  </script>
 
+  <footer>
+    <div class="left">
+      <div class="some-container">
+        <a href="https://www.facebook.com/extmd" class="some" target="_blank">
+          <span class="icon-facebook"></span>
+        </a>
+        <a href="https://www.twitter.com/extmd" class="some" target="_blank">
+          <span class="icon-twitter"></span>
+        </a>
+      </div>
+    </div>
+    <div class="centered">
+      <a href class="button" onclick="trackBegin();return false;">begin</a>
+    </div>
+  </footer>
   <script type='text/javascript' src='//code.jquery.com/jquery-2.1.3.min.js'></script>
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js'></script>
