Fixed volume buttons, added mail logo to download and manifesto as well

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -164,7 +164,7 @@
         <a href="https://www.twitter.com/extmd" class="some" target="_blank">
           <span class="icon-twitter"></span>
         </a>
-        <a href="mailto:info@ext.md" class="some" target="_blank">
+        <a href="mailto:info@ext.md" class="some">
           <span class="icon-email"></span>
         </a>
       </div>
