--- a/frontend/core/src/main/webapp/landing/download.html
+++ b/frontend/core/src/main/webapp/landing/download.html
@@ -58,7 +58,7 @@
           <li class="active"><a href>home</a></li>
           <li id="manifesto-link"><a href="manifesto.html">manifesto</a></li>
           <li><a href="http://www.extendedmind.org" target="_blank">blog</a></li>
-          <li><a href="mailto:info@ext.md">contact</a></li>
+          <li class="hide-for-large-up"><a href="mailto:info@ext.md">contact</a></li>
           <li class="hide-for-medium-up"><a href="https://www.facebook.com/extmd" target="_blank">facebook</a></li>
           <li class="hide-for-medium-up"><a href="https://www.twitter.com/extmd" target="_blank">twitter</a></li>
           <li><a href="https://ext.md/login">log in</a></li>
