--- a/frontend/core/src/main/webapp/landing/manifesto.html
+++ b/frontend/core/src/main/webapp/landing/manifesto.html
@@ -74,7 +74,7 @@
           <li><a href="index.html">home</a></li>
           <li id="manifesto-link" class="active"><a href>manifesto</a></li>
           <li><a href="http://www.extendedmind.org" target="_blank">blog</a></li>
-          <li><a href="mailto:info@ext.md">contact</a></li>
+          <li class="hide-for-large-up"><a href="mailto:info@ext.md">contact</a></li>
           <li class="hide-for-medium-up"><a href="https://www.facebook.com/extmd" target="_blank">facebook</a></li>
           <li class="hide-for-medium-up"><a href="https://www.twitter.com/extmd" target="_blank">twitter</a></li>
           <li><a href="https://ext.md/login">log in</a></li>
@@ -110,6 +110,9 @@
         </a>
         <a href="https://www.twitter.com/extmd" class="some" target="_blank">
           <span class="icon-twitter"></span>
+        </a>
+        <a href="mailto:info@ext.md" class="some">
+          <span class="icon-email"></span>
         </a>
       </div>
     </div>
