Fixed manifesto layout for short screens

--- a/frontend/core/src/main/webapp/landing/manifesto.html
+++ b/frontend/core/src/main/webapp/landing/manifesto.html
@@ -85,14 +85,14 @@
   <div class="main">
     <div id="manifesto">
       <div id="manifesto-container">
-        <p><span class="text-large">we are</span>
+        <p><span class="text-large">we are</span>&nbsp;
         <span class="text-large highlighted">philosophers</span>
         </p>
         <p><span class="text-normal">not just the shaggy haired guys spouting nietzsche and kant at the local pub
         (though we’ve been known to do that too). but ph.d’s in intuitive thinking, learning and
         communication. we’re also geeks that design, code and polish. so we’ve married our two
         worlds &ndash; technology and philosophy &ndash; to create products designed to</span></p>
-        <p><span class="text-large">change the way you</span>
+        <p><span class="text-large">change the way you</span>&nbsp;
         <span class="text-large highlighted">think</span></p>
         <p><span class="text-normal">we believe the human mind is the single greatest tool we have to better
         humanity. so what would the world look like if we could improve our minds’ capacity to function,
