Fixes for item status indicator positioning.

--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -9,7 +9,7 @@
     <span class="text-link" clamp=2 ng-bind="list.trans.title"></span>
   </a>
 
-  <div class="group-mixed--right justified">
+  <div class="group-mixed--right">
     <span class="syncing"></span>
   </div>
 </div>
