--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -29,7 +29,7 @@
           swiper-click="openItemEditor(item)">
           <span class="text-link" clamp=2 ng-bind="item.trans.title"></span>
         </a>
-        <div class="group-mixed--right justified">
+        <div class="group-mixed--right">
           <span class="syncing"></span>
         </div>
       </div>
