Changed "load more" text to "more" text in list loader.

--- a/frontend/core/src/main/webapp/static/app/base/listPrompt.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPrompt.html
@@ -5,7 +5,7 @@
       <span>loading</span><span class="one">.</span><span class="two">.</span><span class="three">.</span>
     </div>
     <a href ng-if="loadMore" style="display: block;" class="downplayed" ng-click="loadMoreFn()">
-      <span class="text-expand-down">load more</span>
+      <span class="text-expand-down">more</span>
     </a>
   </div>
 </div>
