Removed offline *, fixed logo size, added unregistering of listener

--- a/frontend/cordova/src/main/resources/android/index.html
+++ b/frontend/cordova/src/main/resources/android/index.html
@@ -47,7 +47,8 @@
     // device APIs are available
     //
     function onDeviceReady() {
-      navigator.splashscreen.hide();
+      if (navigator && navigator.splashscreen && navigator.splashscreen.hide)
+        navigator.splashscreen.hide();
     }
 
   </script>
