--- a/frontend/core/src/main/webapp/static/app/user/userHome.html
+++ b/frontend/core/src/main/webapp/static/app/user/userHome.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('user')" drawer-handle="left">
   <section ng-if="!isFakeUser()" class="container-content">
-    <h2 class="group-heading justified row" ng-bind="online ? 'online' : '*offline'"></h2>
+    <h2 class="group-heading justified row" ng-bind="online ? 'online' : 'offline'"></h2>
 
     <div class="group-details">
       <div class="row" >
