Go to the right address when begin is clicked

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -170,7 +170,7 @@
       </div>
     </div>
     <div class="centered">
-      <a href class="button" onclick="trackBegin();return false;">begin</a>
+      <a href="https://ext.md/new" class="button" onclick="trackBegin();return false;">begin</a>
     </div>
     <div class="right">
       <div onclick="var audio = document.getElementById('theme');
