--- a/frontend/core/src/main/webapp/landing/manifesto.html
+++ b/frontend/core/src/main/webapp/landing/manifesto.html
@@ -117,7 +117,7 @@
       </div>
     </div>
     <div class="centered">
-      <a href class="button" onclick="trackBegin();return false;">begin</a>
+      <a href="https://ext.md/new" class="button" onclick="trackBegin();return false;">begin</a>
     </div>
   </footer>
   <script type='text/javascript' src='//code.jquery.com/jquery-2.1.3.min.js'></script>
