Removed log in button for mobile, removed begin button from manifesto for mobile

--- a/frontend/core/src/main/webapp/landing/manifesto.html
+++ b/frontend/core/src/main/webapp/landing/manifesto.html
@@ -65,7 +65,7 @@
     <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <a href class="logo"><span class="icon-logo"></span></a>
+          <a href="index.html" class="logo"><span class="icon-logo"></span></a>
         </li>
         <li class="toggle-topbar menu-icon"><a href><span class="icon-menu"></span></a></li>
       </ul>
@@ -77,7 +77,7 @@
           <li class="hide-for-large-up"><a href="mailto:info@ext.md">contact</a></li>
           <li class="hide-for-medium-up"><a href="https://www.facebook.com/extmd" target="_blank">facebook</a></li>
           <li class="hide-for-medium-up"><a href="https://www.twitter.com/extmd" target="_blank">twitter</a></li>
-          <li><a href="https://ext.md/login">log in</a></li>
+          <li class="show-for-large-up"><a href="https://ext.md/login">log in</a></li>
         </ul>
       </section>
     </nav>
@@ -102,7 +102,7 @@
     </div>
   </div>
 
-  <footer>
+  <footer class="show-for-large-up">
     <div class="left">
       <div class="some-container">
         <a href="https://www.facebook.com/extmd" class="some" target="_blank">
