Added a new '/download' path where user is redirected when the platform is web and browser is not chrome.

--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -1,4 +1,4 @@
-<div ng-if="entryState !== 'download'">
+<div ng-if="entryState !== 'download' && isWeb()">
   <section class="container-content em-animation-background">
     <div class="group-instruction-jumbotron row">
       <div class="group-instruction--animation" >
