--- a/frontend/core/src/main/webapp/static/app/base/listPrompt.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPrompt.html
@@ -1,10 +1,10 @@
 <div class="row list-prompt">
-  <div ng-if="isNoItemsPromptVisible()" class="text-downplayed text-details">no {{::promptType}}</div>
+  <div ng-if="isNoItemsPromptVisible()" swiper-click="activateAddNew()" class="text-downplayed text-details">no {{::promptType}}</div>
   <div class="loading-prompt text-downplayed text-details">
     <div ng-if="!loadMore">
       <span>loading</span><span class="one">.</span><span class="two">.</span><span class="three">.</span>
     </div>
-    <a href ng-if="loadMore" style="display: block;" class="downplayed" ng-click="loadMoreFn()">
+    <a href ng-if="loadMore" style="display: block;" class="downplayed" swiper-click="loadMoreFn()">
       <span class="text-expand-down">more</span>
     </a>
   </div>
