Changed no X to be a link, better aligned more text after long task lists

--- a/frontend/core/src/main/webapp/static/app/base/listPrompt.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPrompt.html
@@ -1,5 +1,5 @@
 <div class="row list-prompt">
-  <div ng-if="isNoItemsPromptVisible()" swiper-click="activateAddNew()" class="text-downplayed text-details">no {{::promptType}}</div>
+  <a href ng-if="isNoItemsPromptVisible()" swiper-click="activateAddNew()" class="text-downplayed text-details">no {{::promptType}}</a>
   <div class="loading-prompt text-downplayed text-details">
     <div ng-if="!loadMore">
       <span>loading</span><span class="one">.</span><span class="two">.</span><span class="three">.</span>
