Using the viewport meta tag in iOS recommended at least by Mozilla Developer Network, Google Developer and QuirksMode. This fixes the height of the menu to be the same as in portrait when the device is in landscape mode.

--- a/frontend/cordova/src/main/resources/ios/index.html
+++ b/frontend/cordova/src/main/resources/ios/index.html
@@ -22,7 +22,7 @@
   <meta charset="utf-8" />
   <meta name="fragment" content="!" />
   <meta name="format-detection" content="telephone=no" />
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>extended mind</title>
   <link rel="stylesheet" href="static/${project.version}/css/em.css"/>
   <link rel="stylesheet" href="static/${project.version}/css/animate-animo.css"/>
