Added frame for premium purchase. Improvements and new features for modal. "Get premium" is located inside user feature and in entry as well when trying to log in to other device with the free version. Added reinit for modal with animation in between, close on escape key and new message text container with the support of links inside.

--- a/frontend/core/src/main/webapp/static/app/base/modal.html
+++ b/frontend/core/src/main/webapp/static/app/base/modal.html
@@ -25,8 +25,18 @@
 
         <!-- CONTENT -->
         <div class="textgroup-ingress first last row" ng-bind="messageIngress"></div>
-        <div class="row">
-          <pre class="text-preformatted" ng-bind="messageText"></pre>
+
+        <div ng-if="messageText" class="textgroup-message row">
+          <span ng-repeat="textNode in messageText" ng-switch="textNode.type" class="text-normal">
+            <span ng-switch-when="text" ng-bind="textNode.data"></span>
+            <a href ng-switch-when="link" class="highlighted" ng-click="textNode.action()">
+              <span ng-bind="textNode.data"></span>
+            </a>
+          </span>
+        </div>
+
+        <div ng-if="messageDetails" class="row">
+          <pre class="text-preformatted" ng-bind="messageDetails"></pre>
         </div>
       </div>
 
