--- a/frontend/core/src/main/webapp/static/app/entry/entryMain.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryMain.html
@@ -6,7 +6,8 @@
         class="group-symmetrical--left link-navigation" editable-field-deactivate>
         <span class="text-navigation-back">back</span>
       </a>
-      <a href ng-click="swipeToDetails()" class="group-symmetrical--right link-navigation" editable-field-deactivate>
+      <a href ng-click="swipeToDetails('forgot')" class="group-symmetrical--right link-navigation"
+        editable-field-deactivate>
         <span class="text-navigation-forward">forgot?</span>
       </a>
     </header>
