--- a/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
@@ -31,8 +31,7 @@
     </div>
   </section>
 
-  <footer ng-if="!resetCodeExpires" class="container-content--after group-btn"
-    editable-field-container="{{isEntryInputAutoFocusDisabled() ? '' : 'auto'}}">
+  <footer ng-if="!resetCodeExpires" class="container-content--after group-btn" editable-field-container="auto">
     <button type="submit" class="btn-action" ng-disabled="!forgotForm.$valid || sendingInstructions"
     ng-click="sendInstructions()">
       <span class="text-btn" ng-bind="sendingInstructions && 'sending' || 'send instructions'"></span>
