Removed "/ios" test path and added MockPlatformService to mock iOS when the (spoofed) user agent matches iOS device. Should work with Chrome DevTools in emulation mode.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -163,6 +163,7 @@
   <script src="test/mock/MockTagsBackendService.js"></script>
   <script src="test/mock/MockTasksBackendService.js"></script>
   <script src="test/mock/MockConvertBackendService.js"></script>
+  <script src="test/mock/MockPlatformService.js"></script>
 
   <script src="static/js/animo.min.js"></script>
   <script src="static/js/em-animation.js"></script>
